Fixed buttons for modal on mobile. After recent changes, these were affected. Just moved the styles to the mobile version, out of 680px media query.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -830,7 +830,31 @@ body {
 				}
 
 				button {
+					transition: 0.25s ease;
+					font-size: 1rem;
+					height: 50px;
+					border-radius: 5px;
+					width: 50%;
+					background-color: $white;
+					color: $orange;
+					border: 1px solid $orange;
 					cursor: pointer;
+					&#btn-live {
+						margin-right: 5px;
+						&:hover {
+							color: $white;
+							background-color: $orange;
+						}
+					}
+					&#btn-code {
+						margin-left: 5px;
+						border: 1px solid $blue;
+						color: $blue;
+						&:hover {
+							color: $white;
+							background-color: $blue;
+						}
+					}
 				}
 
 				h2 {
@@ -1248,32 +1272,6 @@ body {
 						height: 50% !important;
 						margin: 0 auto;
 						border-radius: 0 0 0.5rem 0.5rem;
-					}
-					button {
-						transition: 0.25s ease;
-						font-size: 1rem;
-						height: 50px;
-						border-radius: 5px;
-						width: 50%;
-						background-color: $white;
-						color: $orange;
-						border: 1px solid $orange;
-						&#btn-live {
-							margin-right: 5px;
-							&:hover {
-								color: $white;
-								background-color: $orange;
-							}
-						}
-						&#btn-code {
-							margin-left: 5px;
-							border: 1px solid $blue;
-							color: $blue;
-							&:hover {
-								color: $white;
-								background-color: $blue;
-							}
-						}
 					}
 				}
 			}
